{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 24,
  "lineage": "66e2420e-23eb-5c63-7cee-43fb7c2b9096",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CONTROL_PLANE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:795354656121:instance/i-0fe9e907d97df1206",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe9e907d97df1206",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "leads-manager-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd93fb9bbef5720d",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_ip": "54.158.141.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cee18bb7844da6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f37541b587058b09",
            "tags": {
              "Name": "leads-manager-control-plane",
              "Role": "k8s-control-plane"
            },
            "tags_all": {
              "Name": "leads-manager-control-plane",
              "Role": "k8s-control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e2061981ced9b59"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.LEADS_MANAGER_KP",
            "aws_security_group.LEADS_ALB_SG",
            "aws_security_group.LEADS_EC2_SG",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available",
            "tls_private_key.LEADS_MANAGER_KP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WORKER_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:795354656121:instance/i-0d6b9573ca6602499",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d6b9573ca6602499",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "leads-manager-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05afc8a04998970f4",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_ip": "54.81.188.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bd12ac2c6a072ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f37541b587058b09",
            "tags": {
              "Name": "leads-manager-worker-1",
              "Role": "k8s-worker"
            },
            "tags_all": {
              "Name": "leads-manager-worker-1",
              "Role": "k8s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e2061981ced9b59"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.LEADS_MANAGER_KP",
            "aws_security_group.LEADS_ALB_SG",
            "aws_security_group.LEADS_EC2_SG",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available",
            "tls_private_key.LEADS_MANAGER_KP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WORKER_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:795354656121:instance/i-0789579f2c8b28cee",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0789579f2c8b28cee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "leads-manager-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3210e876074a458",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "public_ip": "44.220.92.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d1ba98c84778411",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0640f06c2e90bcb61",
            "tags": {
              "Name": "leads-manager-worker-2",
              "Role": "k8s-worker"
            },
            "tags_all": {
              "Name": "leads-manager-worker-2",
              "Role": "k8s-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e2061981ced9b59"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.LEADS_MANAGER_KP",
            "aws_security_group.LEADS_ALB_SG",
            "aws_security_group.LEADS_EC2_SG",
            "aws_subnet.LEADS_Public_Subnet_2",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available",
            "tls_private_key.LEADS_MANAGER_KP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LEADS_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:internet-gateway/igw-06a65c5d1e97c321b",
            "id": "igw-06a65c5d1e97c321b",
            "owner_id": "795354656121",
            "tags": {
              "Name": "leads-manager-igw"
            },
            "tags_all": {
              "Name": "leads-manager-igw"
            },
            "vpc_id": "vpc-080f587745c77138f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.LEADS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "LEADS_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:loadbalancer/app/leads-manager-alb/5bf789e2911b9824",
            "arn_suffix": "app/leads-manager-alb/5bf789e2911b9824",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "leads-manager-alb-2039633906.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:795354656121:loadbalancer/app/leads-manager-alb/5bf789e2911b9824",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "leads-manager-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03db6b6b46d4c86a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0640f06c2e90bcb61"
              },
              {
                "subnet_id": "subnet-0f37541b587058b09"
              }
            ],
            "subnets": [
              "subnet-0640f06c2e90bcb61",
              "subnet-0f37541b587058b09"
            ],
            "tags": {
              "Name": "leads-manager-alb"
            },
            "tags_all": {
              "Name": "leads-manager-alb"
            },
            "vpc_id": "vpc-080f587745c77138f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.LEADS_ALB_SG",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_subnet.LEADS_Public_Subnet_2",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LEADS_ALB_LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:listener/app/leads-manager-alb/5bf789e2911b9824/024e193b0a3f6fc5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795354656121:listener/app/leads-manager-alb/5bf789e2911b9824/024e193b0a3f6fc5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:loadbalancer/app/leads-manager-alb/5bf789e2911b9824",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.LEADS_ALB",
            "aws_lb_target_group.LEADS_TG",
            "aws_security_group.LEADS_ALB_SG",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_subnet.LEADS_Public_Subnet_2",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "LEADS_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
            "arn_suffix": "targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "32000",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:795354656121:loadbalancer/app/leads-manager-alb/5bf789e2911b9824"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "leads-manager-tg",
            "port": 32000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "leads-manager-tg"
            },
            "tags_all": {
              "Name": "leads-manager-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-080f587745c77138f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.LEADS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WORKER_1_TGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb-20251201234914709600000006",
            "port": 32000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
            "target_id": "i-0d6b9573ca6602499"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.WORKER_1",
            "aws_key_pair.LEADS_MANAGER_KP",
            "aws_lb_target_group.LEADS_TG",
            "aws_security_group.LEADS_ALB_SG",
            "aws_security_group.LEADS_EC2_SG",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available",
            "tls_private_key.LEADS_MANAGER_KP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WORKER_2_TGA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb-20251201234914294300000005",
            "port": 32000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:795354656121:targetgroup/leads-manager-tg/52e7a94e2b84d5cb",
            "target_id": "i-0789579f2c8b28cee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.WORKER_2",
            "aws_key_pair.LEADS_MANAGER_KP",
            "aws_lb_target_group.LEADS_TG",
            "aws_security_group.LEADS_ALB_SG",
            "aws_security_group.LEADS_EC2_SG",
            "aws_subnet.LEADS_Public_Subnet_2",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available",
            "tls_private_key.LEADS_MANAGER_KP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LEADS_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:route-table/rtb-0c88109bcc43c81fb",
            "id": "rtb-0c88109bcc43c81fb",
            "owner_id": "795354656121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a65c5d1e97c321b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leads-manager-public-rt"
            },
            "tags_all": {
              "Name": "leads-manager-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f587745c77138f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.LEADS_IGW",
            "aws_vpc.LEADS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEADS_RTA_Public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed55dfc3a7166d60",
            "route_table_id": "rtb-0c88109bcc43c81fb",
            "subnet_id": "subnet-0f37541b587058b09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.LEADS_IGW",
            "aws_route_table.LEADS_RT",
            "aws_subnet.LEADS_Public_Subnet_1",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEADS_RTA_Public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd1a465e9573f754",
            "route_table_id": "rtb-0c88109bcc43c81fb",
            "subnet_id": "subnet-0640f06c2e90bcb61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.LEADS_IGW",
            "aws_route_table.LEADS_RT",
            "aws_subnet.LEADS_Public_Subnet_2",
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEADS_ALB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:security-group/sg-03db6b6b46d4c86a4",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03db6b6b46d4c86a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "leads-manager-alb-sg",
            "name_prefix": "",
            "owner_id": "795354656121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leads-manager-alb-sg"
            },
            "tags_all": {
              "Name": "leads-manager-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f587745c77138f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.LEADS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEADS_EC2_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:security-group/sg-08e2061981ced9b59",
            "description": "SG for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e2061981ced9b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API Server (from Internet)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Cluster internal",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kubernetes API Server (from VPC)",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from Load Balancer",
                "from_port": 32000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03db6b6b46d4c86a4"
                ],
                "self": false,
                "to_port": 32000
              }
            ],
            "name": "leads-manager-ec2-sg",
            "name_prefix": "",
            "owner_id": "795354656121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leads-manager-ec2-sg"
            },
            "tags_all": {
              "Name": "leads-manager-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-080f587745c77138f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.LEADS_ALB_SG",
            "aws_vpc.LEADS_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEADS_Public_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:subnet/subnet-0f37541b587058b09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37541b587058b09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795354656121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leads-manager-public-subnet-1"
            },
            "tags_all": {
              "Name": "leads-manager-public-subnet-1"
            },
            "vpc_id": "vpc-080f587745c77138f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEADS_Public_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:subnet/subnet-0640f06c2e90bcb61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0640f06c2e90bcb61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "795354656121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "leads-manager-public-subnet-2"
            },
            "tags_all": {
              "Name": "leads-manager-public-subnet-2"
            },
            "vpc_id": "vpc-080f587745c77138f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.LEADS_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LEADS_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].North-Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:795354656121:vpc/vpc-080f587745c77138f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ae59227dca4229b",
            "default_route_table_id": "rtb-0bef1939df70281fd",
            "default_security_group_id": "sg-0d91e14b469fb2a8d",
            "dhcp_options_id": "dopt-0c59eb6f204e32a0e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080f587745c77138f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bef1939df70281fd",
            "owner_id": "795354656121",
            "tags": {
              "Name": "leads-manager-vpc"
            },
            "tags_all": {
              "Name": "leads-manager-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}